# DM818_Mand_project1-3

./: CMakeLists.txt  readme.md
examples/: notes.txt
examples/sse-examples/: avx_256.c  test-inner.c  test.c  test2.c  test3.c  test4.c
git/docs/dm818/DGEMM_online/: dgemm-blocked.c
madatory 1/sources/other/: CMakeLists.txt
mandatory1/: .gitignore  matmul-imada.tar
mandatory1/cuda/: Kernel.cu  dev_array.h  dgemm-cuda.cpp  kernel.h  makefile  matrixmul.cu
mandatory1/handin/sources/other/: CMakeLists.txt
mandatory1/report/: data.xlsx  report.tex  report.toc
mandatory1/sources/other/: Makefile
mandatory1/src/: benchmark.cpp  dgemm-blocked-mjev.cpp  dgemm-blocked.cpp  dgemm-mjerv2.cpp  dgemm.cpp  test.cpp
mandatory1/srcedison/: dgemm.c
mandatory2/: auto-edison-serial  dm818_2017_src.tar
mandatory2/report/: report.tex
mandatory2/src/: Makefile  auto-edison-openmp24  auto-edison-serial  grid.cpp  grid.h  serial.cpp  serial_opti.cpp
mandatory2/src/mpi/: Makefile
mandatory2/src/mpi_opti/: grid.cpp  grid.h  mpi.cpp  mpi.h  mpi_code.cpp  mpi_code.h
mandatory2/src/openmp/: openmp.cpp
mandatory2/src/openmp_opti/: openmp_opti.cpp
mandatory2/src/pthreads/: Makefile  auto-edison-pthreads24  job-edison-pthreads24
mandatory2/src/serial/: common.cpp  common.h  grid.cpp  grid.h  serial.cpp  serial.h  serial_opti.cpp
mandatory2/src/serial_opti/: grid.cpp  grid.h
mandatory2/src/visualize/: Makefile  Particle_serial_opti2  autograder.cpp  data.txt  readme.txt  sample.txt  visualize  visualize.cpp
mandatory2/testcode/: auto-edison-mpi24  auto-edison-openmp24  auto-openmp24.7790450.error  auto-openmp24.7790450.stdout  auto-serial.7790451.error  auto-serial.7790451.stdout  autograder  autograder.cpp  base_serial  base_serial.sh  common.h  makefile  mpi  mpi.sh  mpi.txt  openmp.sh  openmp.txt  serial  serial.sh  serial.txt
mandatory3/src/: Makefile  comm.c  comm.h  main.c  matrix.c  matrix.h
raport/: notes.tex
raport/mand2/: report.tex
raport/mand2/handin/openmp-other/program/: openmp  openmp.sh
raport/mand2/handin/openmp-other/results/: openmp.txt  slope.txt
raport/mand2/handin/openmp-other/sources/: common.h  grid.cpp  grid.h  openmp_opti.cpp
raport/mand2/handin/serial-other/results/: serial.txt  slope.txt
raport/mand2/handin/serial-other/sources/: grid.cpp  grid.h  serial.cpp
raport/mand2/mandatory2/mpi-other/sources/: grid.cpp  mpi.cpp
raport/mand2/mandatory2/openmp-other/results/: laptop.txt
raport/mandatory1/report/: report.tex  report.toc
report/: notes.tex  report.aux  report.tex  report.toc
report/mandatory1/report/: report.aux  report.tex  report.toc
src/: Makefile  benchmark-blas  benchmark-blocked  benchmark-naive  benchmark.cpp  dgemm-blas.cpp  dgemm-blocked-mjev.cpp  dgemm-blocked.cpp  dgemm-mjerv.cpp  dgemm-mjerv2.cpp  dgemm-mjervbackup.cpp  dgemm-naive.cpp  dgemm.cpp  dgemm.h  test-blocked  test.cpp
srcedison/: Makefile  benchmark.c  dgemm-blas.c  dgemm-blocked.c  dgemm-naive.c  dgemm.c  job-blas  job-blocked  job-naive
